--- a/client/blocks/importer/wordpress/upgrade-plan/style.scss
+++ b/client/blocks/importer/wordpress/upgrade-plan/style.scss
@@ -194,6 +194,7 @@ $business-plan-color: #7f54b3;
 			color: var(--studio-gray-80);
 			flex-basis: 100%;
 			padding: 0;
+			margin-bottom: 0;
 
 			button {
 				/* stylelint-disable-next-line declaration-property-unit-allowed-list */
@@ -326,14 +327,16 @@ $business-plan-color: #7f54b3;
 				text-align: center;
 				font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
 				margin-bottom: 0.5rem;
+				line-height: 22px;
 			}
 
 			.import__upgrade-plan-hosting-details-testimonials {
+				height: 37px;
 				text-align: center;
 
 				.import__upgrade-plan-hosting-details-tooltip-hover-area-container {
-					height: 38px;
-					width: 38px;
+					height: 36px;
+					width: 36px;
 					display: inline-block;
 					border-radius: 50%;
 
