--- a/client/blocks/signup-form/style.scss
+++ b/client/blocks/signup-form/style.scss
@@ -201,6 +201,10 @@ body.is-section-accept-invite {
 					color: var(--color-link);
 					cursor: pointer;
 					text-decoration: none;
+
+					&:hover {
+						color: var(--color-link-dark);
+					}
 				}
 
 				button.is-borderless {
