--- a/client/my-sites/stats/grid-layout.scss
+++ b/client/my-sites/stats/grid-layout.scss
@@ -123,6 +123,14 @@ $grid-vertical-gutters: 32px;
 				max-width: calc(60% - #{gutter-offset(2, 1)});
 			}
 
+			// sidebar + content // wide(2xl) is the max value so the classe is for an xlarge screen
+			@media (max-width: $break-wide ) {
+				.stats__flexible-grid-item--full--xlarge {
+					flex: 0 1 100%;
+					max-width: 100%;
+				}
+			}
+
 			// sidebar + content // xlarge is the max value so the classes are for a large screen
 			@media (max-width: $break-xlarge ) {
 				// move 2/3 and 1/2 to full
