--- a/client/a8c-for-agencies/sections/sites/features/jetpack/activity/style.scss
+++ b/client/a8c-for-agencies/sections/sites/features/jetpack/activity/style.scss
@@ -1,7 +1,6 @@
-.activity-log-v2 {
+main.main.activity-log-v2 {
 	text-align: left;
-}
-
-main.activity-log-v2:not(.wordpressdotcom) .activity-log-v2__header {
-	margin: 0;
+	.activity-log-v2__header {
+		margin: 0;
+	}
 }
