--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -35,14 +35,14 @@
 		padding-block-start: 24px;
 	}
 
-	.dataviews-view-table thead {
-		position: sticky;
-		top: 0;
-		z-index: 2;
-	}
-
 	@media (min-width: $break-large) {
 		background: inherit;
+
+		.dataviews-view-table thead {
+			position: sticky;
+			top: 0;
+			z-index: 2;
+		}
 
 		&.sites-dashboard__layout:not(.preview-hidden) .sites-overview__page-title {
 			font-size: 1.25rem;
@@ -233,7 +233,7 @@
 		}
 	}
 
-	@media (min-width: $break-wide) {
+	@media (min-width: $break-large) {
 		&.sites-dashboard__layout {
 			.dataviews-view-table-wrapper {
 				overflow-y: auto;
