--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -1,18 +1,21 @@
-.top-cards-wrapper {
+.hosting-overview__top-cards-wrapper {
 	display: flex;
-	gap: 20px;
+	gap: 33px;
 }
 
-.top-card {
+.hosting-overview__card {
+	border-radius: 4px;
+	border: 1px solid var(--Gray-Gray-5, #dcdcde);
 	flex: 1;
+	padding: 22px;
 }
 
-.actions-list {
+.hosting-overview__actions-list {
 	list-style: none;
 	margin: 0;
 }
 
-.action {
+.hosting-overview__action {
 	list-style: none;
 	border-bottom: 1px solid #f0f0f0;
 
@@ -21,17 +24,17 @@
 	}
 }
 
-.action-button {
+.hosting-overview__action-button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.action-text {
+.hosting-overview__action-text {
 	display: flex;
 	align-items: center;
 
-	.action-icon__dashicon {
+	.hosting-overview__dashicon {
 		margin-right: 2px;
 	}
 }
