--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
@@ -2,10 +2,11 @@
 	flex-grow: 1;
 	background-color: var(--studio-white);
 	padding: 48px;
-	text-align: center;
+	text-align: left;
 	overflow-y: auto;
 
 	.expanded-card {
+		text-align: left;
 		width: auto;
 		max-width: unset !important;
 
@@ -56,7 +57,6 @@
 .site-preview-pane__monitor-content {
 
 	text-align: unset !important;
-
 
 	.site-expanded-content__card-content-column {
 		max-width: unset;
