Fix text overflow for woo

--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -1501,6 +1501,7 @@ $breakpoint-mobile: 660px;
 				padding: 0;
 				border: 0;
 				border-radius: 0;
+				width: 100%;
 			}
 
 			.gravatar.continue-as-user__gravatar {
