--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -1,11 +1,24 @@
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
 .step-section-item {
-	display: flex;
 	margin-block-end: 16px;
 	border-radius: 4px;
 	border: 1px solid var(--color-accent-5);
 	padding: 16px 24px;
-	gap: 16px;
-	position: relative;
+
+	@include break-large {
+		display: flex;
+		gap: 16px;
+	}
+
+	.step-section-item__icon {
+		display: none;
+
+		@include break-large {
+			display: block;
+		}
+	}
 
 	.step-section-item__heading {
 		font-size: rem(16px);
@@ -18,6 +31,17 @@
 	}
 
 	.step-section-item__button {
-		margin-block: auto;
+		margin-block-start: 16px;
+		margin-inline-start: auto;
+
+		button {
+			width: 100%;
+		}
+
+		@include break-large {
+			margin-block: auto;
+			display: flex;
+			gap: 16px;
+		}
 	}
 }
