--- a/client/a8c-for-agencies/sections/purchases/licenses/license-details/style.scss
+++ b/client/a8c-for-agencies/sections/purchases/licenses/license-details/style.scss
@@ -115,9 +115,16 @@
 }
 
 .license-details__actions .button.is-compact {
+	border: 1px solid var(--color-accent);
 	padding: 8px 14px;
 	font-size: 1rem;
+	font-weight: 500;
 	line-height: 1.375;
+
+	&:hover {
+		background-color: var(--color-accent-90);
+
+	}
 
 	@include break-large {
 		padding: 7px;
