--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -6,19 +6,20 @@
 
 .hosting-overview__card {
 	border-radius: 4px;
-	border: 1px solid var(--Gray-Gray-5, #dcdcde);
+	border: 1px solid var(--studio-gray-5);
 	flex: 1;
 	padding: 22px;
 }
 
-.hosting-overview__plan-card-header {
+.hosting-overview__plan-card-header,
+.hosting-overview__plan-price {
 	display: flex;
 	margin-bottom: 8px;
-
 }
 
-.hosting-overview__plan-card-title {
-	color: var(--Gray-Gray-100, #101517);
+.hosting-overview__plan-card-title,
+.hosting-overview__plan-price {
+	color: var(--studio-gray-100);
 	flex: 1;
 	font-feature-settings: "clig" off, "liga" off;
 	font-family: "SF Pro", $sans;
@@ -43,7 +44,7 @@ a.hosting-overview__link-button {
 }
 
 .hosting-overview__card-title {
-	color: var(--Gray-Gray-100, #101517);
+	color: var(--studio-gray-100);
 	flex: 1;
 	font-feature-settings: "clig" off, "liga" off;
 	font-family: "SF Pro Display", $sans;
@@ -52,6 +53,16 @@ a.hosting-overview__link-button {
 	font-weight: 500;
 	line-height: 26px;
 	letter-spacing: 0.38px;
+}
+
+
+.hosting-overview__plan-info {
+	color: var(--studio-gray-80);
+	font-family: "SF Pro Text", $sans;
+	font-size: $font-body-extra-small;
+	font-style: normal;
+	line-height: 16px;
+	margin-bottom: 4px;
 }
 
 .hosting-overview__actions-list {
@@ -79,7 +90,7 @@ a.hosting-overview__link-button {
 .hosting-overview__action-button {
 	display: flex;
 	justify-content: space-between;
-	color: var(--Gray-Gray-100, #101517);
+	color: var(--studio-gray-100);
 	font-family: "SF Pro Text", $sans;
 	font-size: $font-body-small;
 	font-style: normal;
@@ -90,7 +101,7 @@ a.hosting-overview__link-button {
 	&:visited,
 	&:active,
 	&:focus {
-		color: var(--Gray-Gray-100, #101517);
+		color: var(--studio-gray-100);
 		text-decoration: none;
 	}
 }
