--- a/client/my-sites/patterns/components/section/style.scss
+++ b/client/my-sites/patterns/components/section/style.scss
@@ -58,10 +58,6 @@
 	}
 
 	.patterns-section__header {
-		padding: 0 24px 32px;
-	}
-
-	.patterns-section__body {
-		padding: 0 24px;
+		padding-bottom: 32px;
 	}
 }
