--- a/client/my-sites/patterns/components/header/style.scss
+++ b/client/my-sites/patterns/components/header/style.scss
@@ -56,7 +56,8 @@
 
 	@media ( max-width: $break-wide ) {
 		.patterns-header__inner {
-			padding: 90px 24px 24px;
+			padding-top: 90px;
+			padding-bottom: 24px;
 			background: none;
 
 			h1 {
