--- a/client/my-sites/patterns/style.scss
+++ b/client/my-sites/patterns/style.scss
@@ -1,4 +1,5 @@
 @import "@wordpress/base-styles/breakpoints";
+@import "calypso/my-sites/patterns/mixins";
 
 .is-section-patterns {
 	.layout__content {
@@ -28,6 +29,17 @@
 
 		.lp-footer-language {
 			display: none;
+		}
+
+		.lpc-footer-nav,
+		.lpc-footer-automattic-nav {
+			padding-left: 0;
+			padding-right: 0;
+		}
+
+		.lpc-footer-nav-wrapper,
+		.lpc-footer-automattic-nav-wrapper {
+			@include patterns-page-width;
 		}
 	}
 
