Introduce the tooltip to PieChart

--- a/client/components/pie-chart/style.scss
+++ b/client/components/pie-chart/style.scss
@@ -1,3 +1,52 @@
+/**
+ * Pie Chart Tooltip styles section
+ */
+.pie-chart__chart-container {
+	position: relative;
+
+	& > svg {
+		width: 100%;
+		height: auto;
+	}
+
+	.pie-chart__chart-drawing {
+		max-width: unset;
+	}
+}
+
+.pie-chart__tooltip {
+	display: flex;
+	align-items: center;
+
+	visibility: hidden;
+	position: absolute;
+	width: 244px;
+	box-sizing: border-box;
+	background-color: var(--studio-gray-100);
+	color: var(--studio-white);
+	padding: 16px 24px;
+	border-radius: 4px;
+	pointer-events: none;
+
+	& > svg {
+		margin-right: 8px;
+	}
+
+	.pie-chart__tooltip-content {
+		flex: 1;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		font-family: Inter, $sans;
+		font-size: $font-body-small;
+		font-weight: 500;
+		line-height: 20px;
+	}
+}
+/**
+ * Pie Chart Tooltip styles section
+ */
+
 .pie-chart__placeholder,
 .pie-chart {
 	display: flex;
