--- a/client/a8c-for-agencies/style.scss
+++ b/client/a8c-for-agencies/style.scss
@@ -119,6 +119,12 @@
 	.button.is-borderless:hover,
 	.button.is-borderless {
 		background: none;
+		color: var(--studio-gray-80);
+	}
+
+	.split-button .button {
+		font-size: 1rem;
+		height: 40px;
 	}
 
 	.components-form-toggle.is-checked .components-form-toggle__track {
