Set site favicon border-radius to 4px

--- a/client/a8c-for-agencies/sections/sites/site-favicon/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-favicon/style.scss
@@ -2,7 +2,8 @@
 	margin-right: 16px;
 
 	.site-icon {
-		border-radius: 10px; /* stylelint-disable-line scales/radii */
+		border-radius: 4px;
+
 		&.is-blank {
 			background: transparent;
 			.wpcom-favicon {
