Vertically center table header text

--- a/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
@@ -65,10 +65,11 @@
 		}
 
 		th {
-			padding: 16px 4px 16px 48px;
+			padding: 13px 4px 13px 48px;
 			border-bottom: 1px solid var(--studio-gray-5);
 			font-size: rem(13px);
 			font-weight: 400;
+			vertical-align: middle;
 		}
 
 		td {
