For pressable licenses add Manage link in preview

--- a/client/a8c-for-agencies/sections/purchases/licenses/license-preview/style.scss
+++ b/client/a8c-for-agencies/sections/purchases/licenses/license-preview/style.scss
@@ -37,6 +37,10 @@
 	inset-block-start: 3px;
 }
 
+.license-preview__product-pressable-link {
+	text-decoration: underline;
+}
+
 .license-preview__domain {
 	padding: 0;
 	margin: 0 0 4px;
