fix: in progress

--- a/client/my-sites/patterns/style.scss
+++ b/client/my-sites/patterns/style.scss
@@ -38,7 +38,8 @@
 		}
 
 		.lpc-footer-nav-wrapper,
-		.lpc-footer-automattic-nav-wrapper {
+		.lpc-footer-automattic-nav-wrapper,
+		.lp-link-work-m {
 			@include patterns-page-width;
 		}
 	}
