--- a/client/components/survey-container/components/style.scss
+++ b/client/components/survey-container/components/style.scss
@@ -1,8 +1,61 @@
+@import "@automattic/color-studio/dist/color-variables";
+
+$blueberry-color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9));
+$blueberry-hover-color: #2145e6;
+
+@mixin question-options-container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 28px;
+	width: 100%;
+}
+
+@mixin question-option-control {
+	flex-basis: calc(50% - 48px);
+	border-radius: 2px;
+	border: solid 1px $studio-gray-5;
+	padding: 16px;
+	cursor: pointer;
+
+	&:hover {
+		border-color: $blueberry-color;
+	}
+}
+
 .question-step {
 	&__content {
 		display: flex;
 		flex-direction: column;
 		align-items: start;
 		gap: 44px;
+	}
+
+	&__continue-button.components-button.is-primary {
+		background-color: $blueberry-color;
+		border-color: $blueberry-color;
+		padding: 8px 14px 8px 14px;
+		height: 40px;
+
+		&:not(:disabled) {
+			&:hover,
+			&:focus,
+			&:active {
+				background-color: $blueberry-hover-color;
+				border-color: $blueberry-hover-color;
+			}
+		}
+	}
+
+	.question-options__container {
+		@include question-options-container;
+
+		.question-options__option-control {
+			@include question-option-control;
+
+			.question-options__option-help-text {
+				display: block;
+			}
+		}
 	}
 }
