--- a/client/my-sites/patterns/components/pattern-preview/style.scss
+++ b/client/my-sites/patterns/components/pattern-preview/style.scss
@@ -47,8 +47,8 @@
 	}
 
 	.pattern-preview__header {
+		align-items: start;
 		display: flex;
-		align-items: flex-start;
 		font-family: $font-sf-pro-display;
 		gap: 16px;
 		justify-content: space-between;
@@ -61,7 +61,8 @@
 	.pattern-preview__title {
 		font-size: inherit;
 		line-height: inherit;
-		padding: 0;
+		padding-bottom: 0;
+		padding-top: 4px;
 		text-align: left;
 
 		&:hover {
@@ -125,6 +126,7 @@
 	}
 
 	.pattern-preview__title {
+		padding-top: 0;
 		@include break-huge {
 			font-size: rem(20px);
 		}
