--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -7,6 +7,7 @@
 .hosting-overview__card {
 	border-radius: 4px;
 	border: 1px solid var(--studio-gray-5);
+	box-shadow: none;
 	flex: 1;
 	padding: 22px;
 }
