--- a/client/components/survey-container/components/style.scss
+++ b/client/components/survey-container/components/style.scss
@@ -19,7 +19,7 @@ $blueberry-hover-color: #2145e6;
 	cursor: pointer;
 
 	&:hover {
-		border-color: $blueberry-color;
+		border-color: $blueberry-hover-color;
 	}
 }
 
@@ -56,11 +56,18 @@ $blueberry-hover-color: #2145e6;
 			input[type="radio"] {
 				height: 20px;
 				width: 20px;
+				margin: 0;
+				border-color: $studio-gray-20;
+
+				&:checked {
+					border-color: $blueberry-hover-color;
+				}
 
 				&:checked::before {
 					margin: 2px;
 					width: 14px;
 					height: 14px;
+					background-color: $blueberry-hover-color;
 				}
 			}
 
