--- a/client/components/survey-container/components/style.scss
+++ b/client/components/survey-container/components/style.scss
@@ -56,6 +56,7 @@ $blueberry-hover-color: #2145e6;
 			input[type="radio"] {
 				height: 20px;
 				width: 20px;
+				min-width: 20px;
 				margin: 0;
 				border-color: $studio-gray-20;
 
