Fix incorrect hover/focus styling on Overview checklist items.

--- a/client/a8c-for-agencies/sections/overview/body/next-steps/style.scss
+++ b/client/a8c-for-agencies/sections/overview/body/next-steps/style.scss
@@ -60,12 +60,12 @@
 		&.completed.enabled > a:focus,
 		&.pending > a:focus {
 			.checklist-item__text {
-				color: var(--color-jetpack);
+				color: var(--color-primary);
 			}
 
 			.checklist-item__chevron,
 			.checklist-item__checkmark {
-				fill: var(--color-jetpack);
+				fill: var(--color-primary);
 			}
 		}
 	}
