--- a/client/blocks/importer/wordpress/upgrade-plan/style.scss
+++ b/client/blocks/importer/wordpress/upgrade-plan/style.scss
@@ -21,22 +21,16 @@ $business-plan-color: #7f54b3;
 		}
 
 		&.feature-list-expanded {
-			.import__upgrade-plan-features-container,
-			.import__upgrade-plan-hosting-details {
-				@include break-medium {
-					height: initial;
-				}
-			}
-
 			.import__upgrade-plan-features-container {
 				@include break-medium {
+					height: initial;
 					margin-bottom: 8.5rem;
 				}
 			}
 
-			.import__upgrade-plan-hosting-details {
+			.import__upgrade-plan-hosting-details-card-container {
 				@include break-medium {
-					margin-bottom: 9.25rem;
+					height: 94rem;
 				}
 			}
 		}
@@ -266,156 +260,162 @@ $business-plan-color: #7f54b3;
 	}
 
 	.import__upgrade-plan-hosting-details {
-		background-color: #fbfbfb;
-		border-bottom: 1px solid #e0e0e0;
-		border-bottom-left-radius: 4px;
-		border-bottom-right-radius: 4px;
-		border-left: 1px solid #e0e0e0;
-		border-right: 1px solid #e0e0e0;
-		border-top: 0;
-		border-top-right-radius: 0;
-		box-sizing: border-box;
-		display: flex;
-		flex-direction: column;
-		gap: 1.5rem;
-		margin-top: 0;
-		max-width: 100%;
-		padding: 1.5rem;
 		margin-bottom: 60px;
 
-		@include break-medium {
-			margin-right: 0;
-			margin-left: 0;
-			margin-top: 0.75rem;
-			border-top: 1px solid #e0e0e0;
-			border-top-right-radius: 4px;
-			border-bottom-right-radius: 4px;
-			border-bottom-left-radius: 0;
+		.import__upgrade-plan-hosting-details-card-container {
+			background-color: #fbfbfb;
 			border-bottom: 1px solid #e0e0e0;
-			border-left: 0;
-			width: 324px;
-			height: 376px;
-			margin-bottom: 60px;
-		}
+			border-bottom-left-radius: 4px;
+			border-bottom-right-radius: 4px;
+			border-left: 1px solid #e0e0e0;
+			border-right: 1px solid #e0e0e0;
+			border-top: 0;
+			border-top-right-radius: 0;
+			box-sizing: border-box;
+			display: flex;
+			flex-direction: column;
+			gap: 1.5rem;
+			margin-top: 0;
+			max-width: 100%;
+			padding: 1.5rem;
 
-		@include break-small {
-			margin-bottom: 0;
-		}
-
-		.import__upgrade-plan-hosting-details-header {
-			text-align: center;
-			.import__upgrade-plan-hosting-details-header-main {
-				font-size: 1.25rem;
-				color: var(--studio-gray-100, #101517);
-				margin-bottom: 0.5rem;
-				font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
-				line-height: normal;
+			@include break-medium {
+				margin-right: 0;
+				margin-left: 0;
+				margin-top: 0.75rem;
+				border-top: 1px solid #e0e0e0;
+				border-top-right-radius: 4px;
+				border-bottom-right-radius: 4px;
+				border-bottom-left-radius: 0;
+				border-bottom: 1px solid #e0e0e0;
+				border-left: 0;
+				width: 324px;
+				height: 376px;
 			}
 
-			.import__upgrade-plan-hosting-details-header-subtext {
-				color: var(--studio-gray-50, #646970);
-				font-size: 0.75rem;
-				line-height: 1.4;
-				margin-bottom: 0;
-			}
-		}
-
-		.import__upgrade-plan-hosting-details-list {
-			font-size: 0.875rem;
-			ul {
-				list-style: none;
-				margin: 0;
-			}
-
-			li {
-				display: flex;
-				gap: 0.5rem;
-				margin-bottom: 1rem;
-
-				&:last-child {
-					margin-bottom: 0;
-				}
-			}
-
-			.import__upgrade-plan-hosting-details-list-icon {
-				border-radius: 4px;
-				background-color: var(--studio-purple-0);
-				padding: 4px;
-				border: 2px solid var(--studio-purple-0);
-				fill: var(--studio-purple-50);
-			}
-
-			.import__upgrade-plan-hosting-details-list-stats {
-				display: flex;
-				flex-direction: column;
-				gap: 0.125rem;
-				line-height: 1.4;
-				justify-content: space-around;
-
-				.import__upgrade-plan-hosting-details-list-stats-title {
-					font-size: 0.875rem;
-					font-weight: 500;
+			.import__upgrade-plan-hosting-details-header {
+				text-align: center;
+				.import__upgrade-plan-hosting-details-header-main {
+					font-size: 1.25rem;
 					color: var(--studio-gray-100, #101517);
-					line-height: 20px;
+					margin-bottom: 0.5rem;
+					font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
+					line-height: normal;
+				}
+
+				.import__upgrade-plan-hosting-details-header-subtext {
+					color: var(--studio-gray-50, #646970);
+					font-size: 0.75rem;
+					line-height: 1.4;
 					margin-bottom: 0;
 				}
+			}
 
-				.import__upgrade-plan-hosting-details-list-stats-description {
-					font-size: 0.75rem;
-					color: var(--studio-gray-50, #646970);
+			.import__upgrade-plan-hosting-details-list {
+				font-size: 0.875rem;
+				ul {
+					list-style: none;
+					margin: 0;
+				}
+
+				li {
+					display: flex;
+					gap: 0.5rem;
+					margin-bottom: 1rem;
+
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
+
+				.import__upgrade-plan-hosting-details-list-icon {
+					border-radius: 4px;
+					background-color: var(--studio-purple-0);
+					padding: 4px;
+					border: 2px solid var(--studio-purple-0);
+					fill: var(--studio-purple-50);
+				}
+
+				.import__upgrade-plan-hosting-details-list-stats {
+					display: flex;
+					flex-direction: column;
+					gap: 0.125rem;
+					line-height: 1.4;
+					justify-content: space-around;
+
+					.import__upgrade-plan-hosting-details-list-stats-title {
+						font-size: 0.875rem;
+						font-weight: 500;
+						color: var(--studio-gray-100, #101517);
+						line-height: 20px;
+						margin-bottom: 0;
+					}
+
+					.import__upgrade-plan-hosting-details-list-stats-description {
+						font-size: 0.75rem;
+						color: var(--studio-gray-50, #646970);
+					}
 				}
 			}
-		}
 
-		.import__upgrade-plan-hosting-details-testimonials-container {
-			p {
-				color: var(--studio-gray-100, #101517);
-				text-align: center;
-				font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
-				margin-bottom: 0.5rem;
-				line-height: 22px;
-			}
+			.import__upgrade-plan-hosting-details-testimonials-container {
+				p {
+					color: var(--studio-gray-100, #101517);
+					text-align: center;
+					font-family: Recoleta, "Noto Serif", Georgia, "Times New Roman", Times, serif;
+					margin-bottom: 0.5rem;
+					line-height: 22px;
+				}
 
-			.import__upgrade-plan-hosting-details-testimonials {
-				height: 37px;
-				text-align: center;
+				.import__upgrade-plan-hosting-details-testimonials {
+					height: 37px;
+					text-align: center;
 
-				.import__upgrade-plan-hosting-details-tooltip-hover-area-container {
-					height: 36px;
-					width: 36px;
-					display: inline-block;
-					border-radius: 50%;
-
-					&:nth-child(2) {
-						z-index: 2;
-						transform: translateX(-6px);
-					}
-
-					&:nth-child(3) {
-						z-index: 3;
-						transform: translateX(-12px);
-					}
-
-					&:nth-child(4) {
-						z-index: 4;
-						transform: translateX(-18px);
-					}
-
-					&:nth-child(5) {
-						z-index: 4;
-						transform: translateX(-24px);
-					}
-
-					.import__upgrade-plan-hosting-details-testimonials-image {
+					.import__upgrade-plan-hosting-details-tooltip-hover-area-container {
 						height: 36px;
 						width: 36px;
-						border: 1px solid #fff;
+						display: inline-block;
 						border-radius: 50%;
+
+						&:nth-child(2) {
+							z-index: 2;
+							transform: translateX(-6px);
+						}
+
+						&:nth-child(3) {
+							z-index: 3;
+							transform: translateX(-12px);
+						}
+
+						&:nth-child(4) {
+							z-index: 4;
+							transform: translateX(-18px);
+						}
+
+						&:nth-child(5) {
+							z-index: 4;
+							transform: translateX(-24px);
+						}
+
+						.import__upgrade-plan-hosting-details-testimonials-image {
+							height: 36px;
+							width: 36px;
+							border: 1px solid #fff;
+							border-radius: 50%;
+						}
 					}
 				}
 			}
 		}
+
+		.import__upgrade-plan-hosting-details-identified-host {
+			color: var(--studio-gray-50, #646970);
+			font-size: 0.875rem;
+			text-align: center;
+			padding: 0.5rem 1.5rem;
+		}
 	}
+
 }
 
 .popover.tooltip.import__upgrade-plan-hosting-details-tooltip.is-top {
